--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.centerbox{
+  width:980px;
+  margin:0 auto;
+  padding:50px 30px;
+}
